@@ -193,6 +193,38 @@ If you want pint to automatically perform dimensional reduction when producing
 new quantities, the ``UnitRegistry`` class accepts a parameter ``auto_reduce_dimensions``.
 Dimensional reduction can be slow, so auto-reducing is disabled by default.
 
+The methods  ``to_preferred()`` and ``ito_preferred()`` provide more control over dimensional
+reduction by specifying a list of units to combine to get the required dimensionality.
+
+.. doctest::
+
+   >>> preferred_units = [
+   ...    ureg.ft,  # distance      L
+   ...    ureg.slug,  # mass          M
+   ...    ureg.s,  # duration      T
+   ...    ureg.rankine,  # temperature   Θ
+   ...    ureg.lbf,  # force         L M T^-2
+   ...    ureg.W,  # power         L^2 M T^-3
+   ... ]
+   >>> power = ((1 * ureg.lbf) * (1 * ureg.m / ureg.s)).to_preferred(preferred_units)
+   >>> print(power)
+   4.4482216152605005 watt
+
+The list of preferred units can also be specified in the unit registry to prevent having to pass it to every call to ``to_preferred()``.
+
+.. doctest::
+
+   >>> ureg.default_preferred_units = preferred_units
+   >>> power = ((1 * ureg.lbf) * (1 * ureg.m / ureg.s)).to_preferred()
+   >>> print(power)
+   4.4482216152605005 watt
+
+The ``UnitRegistry`` class accepts a parameter ``autoconvert_to_preferred``. If set to ``True``, pint will automatically convert to
+preferred units when producing new quantities. This is disabled by default.
+
+Note when there are multiple good combinations of units to reduce to, to_preferred is not guaranteed to be repeatable.
+For example, ``(1 * ureg.lbf * ureg.m).to_preferred(preferred_units)`` may return ``W s`` or ``ft lbf``.
+
 String parsing
 --------------
 
