@@ -165,7 +165,7 @@ def to_compact(
 
 
 def to_preferred(
-    quantity: PlainQuantity, preferred_units: list[UnitLike]
+    quantity: PlainQuantity, preferred_units: Optional[list[UnitLike]] = None
 ) -> PlainQuantity:
     """Return Quantity converted to a unit composed of the preferred units.
 
@@ -180,8 +180,38 @@ def to_preferred(
     <Quantity(4.44822162, 'second * watt')>
     """
 
+    units = _get_preferred(quantity, preferred_units)
+    return quantity.to(units)
+
+
+def ito_preferred(
+    quantity: PlainQuantity, preferred_units: Optional[list[UnitLike]] = None
+) -> PlainQuantity:
+    """Return Quantity converted to a unit composed of the preferred units.
+
+    Examples
+    --------
+
+    >>> import pint
+    >>> ureg = pint.UnitRegistry()
+    >>> (1*ureg.acre).to_preferred([ureg.meters])
+    <Quantity(4046.87261, 'meter ** 2')>
+    >>> (1*(ureg.force_pound*ureg.m)).to_preferred([ureg.W])
+    <Quantity(4.44822162, 'second * watt')>
+    """
+
+    units = _get_preferred(quantity, preferred_units)
+    return quantity.ito(units)
+
+
+def _get_preferred(
+    quantity: PlainQuantity, preferred_units: Optional[list[UnitLike]] = None
+) -> PlainQuantity:
+    if preferred_units is None:
+        preferred_units = quantity._REGISTRY.default_preferred_units
+
     if not quantity.dimensionality:
-        return quantity
+        return quantity._units.copy()
 
     # The optimizer isn't perfect, and will sometimes miss obvious solutions.
     # This sub-algorithm is less powerful, but always finds the very simple solutions.
@@ -211,7 +241,7 @@ def to_preferred(
 
     simple = find_simple()
     if simple is not None:
-        return quantity.to(simple)
+        return simple
 
     # For each dimension (e.g. T(ime), L(ength), M(ass)), assign a default base unit from
     # the collection of base units
@@ -380,8 +410,8 @@ def to_preferred(
         min_key = sorted(sorting_keys)[0]
         result_unit = sorting_keys[min_key]
 
-        return quantity.to(result_unit)
+        return result_unit
 
     # for whatever reason, a solution wasn't found
     # return the original quantity
-    return quantity
+    return quantity._units.copy()
