@@ -407,6 +407,36 @@ class TestQuantity(QuantityTestCase):
         result = Q_("1 volt").to_preferred(preferred_units)
         assert result.units == ureg.volts
 
+    @helpers.requires_mip
+    def test_to_preferred_registry(self):
+        ureg = UnitRegistry()
+        Q_ = ureg.Quantity
+        ureg.preferred_units = [
+            ureg.m,  # distance      L
+            ureg.kg,  # mass          M
+            ureg.s,  # duration      T
+            ureg.N,  # force         L M T^-2
+            ureg.Pa,  # pressure      M L^−1 T^−2
+            ureg.W,  # power         L^2 M T^-3
+        ]
+        pressure = (Q_(1, "N") * Q_("1 m**-2")).to_preferred()
+        assert pressure.units == ureg.Pa
+
+    @helpers.requires_mip
+    def test_autoconvert_to_preferred(self):
+        ureg = UnitRegistry()
+        Q_ = ureg.Quantity
+        ureg.preferred_units = [
+            ureg.m,  # distance      L
+            ureg.kg,  # mass          M
+            ureg.s,  # duration      T
+            ureg.N,  # force         L M T^-2
+            ureg.Pa,  # pressure      M L^−1 T^−2
+            ureg.W,  # power         L^2 M T^-3
+        ]
+        pressure = Q_(1, "N") * Q_("1 m**-2")
+        assert pressure.units == ureg.Pa
+
     @helpers.requires_numpy
     def test_convert_numpy(self):
         # Conversions with single units take a different codepath than
